refactor(runtime): share one watchdog between both script runtimes
Cleanup pass over the previous commit. No behaviour change — the stop
tests pass unmodified except where a deleted method was referenced.

The escalation ladder and the per-runner stop state each existed twice,
once in the script runtime and once in the management twin. The two
copies had already drifted inside the commit that introduced them (the
management side initially lost the classloader pin), which is the tell:
two hand-maintained copies of a containment mechanism don't stay in
sync, and the next missed edit silently leaves a class of scripts
uncontained with nothing to catch it.

Extracts LivenessWatchdog — the thresholds and the STALLED -> REVOKED ->
ABANDONED ladder, sweeping over a Subject role interface — and
RunnerLiveness, the per-runner state, composed into both runners rather
than inherited. 375 lines removed from the four existing files against
139 added.

Also fixes the hot path this exposed: ScriptContext.isStopRequested() is
documented as something scripts poll inside long loops, but resolved
through a by-name linear scan across the active and quarantined lists,
comparing each with equalsIgnoreCase and growing as zombies accumulate.
The signal now binds straight to the runner's RunnerLiveness, built
before the context so both share one object — a single atomic read.

Smaller: getRunners() no longer copies the list twice on a path seven GUI
panels hit per frame; drops ManagementScriptRunner.threadStackTrace()
(no callers) and ScriptGate.isCallerRevoked() (duplicated checkCaller's
predicate, only tests used it); removes two imports the extraction left
behind.

Deliberately kept: the management runner's ScriptHealth/crash telemetry
is unread today, but it exists to close the observability asymmetry on
the more privileged cross-client runner (audit L14). The gap is that no
management panel surfaces it yet, not that the state shouldn't exist.

Trello #121, #237